# parcs

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  config.json  genindex.html  graph_description.yml  index.html  main.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/features/: interventions.doctree  looping.doctree  m_graphs.doctree  more_graph_objects.doctree  partial_randomization.doctree  temporal_graph.doctree
.doctrees/first_steps/: first_graph.doctree  function_list.doctree  theoretical_background.doctree
.doctrees/getting_started/: first_graph.doctree  function_list.doctree  nodes_and_edges.doctree  partial_randomization.doctree  theoretical_background.doctree
.doctrees/technical/: api.doctree  conventions.doctree  diagrams.doctree  graph_objects.doctree
.github/workflows/: docs_pages.yml
_sources/features/: interventions.rst.txt  looping.rst.txt  m_graphs.rst.txt  more_graph_objects.rst.txt  temporal_graph.rst.txt
_sources/first_steps/: first_graph.rst.txt  theoretical_background.rst.txt
_sources/getting_started/: first_graph.rst.txt
_sources/technical/: conventions.rst.txt  diagrams.rst.txt  graph_objects.rst.txt
configs/params/: default.yml
docs/source/: api.rst  causal_dag.html  causal_dag.rst  conf.py  function_list.rst  get_started.rst  get_started.txt  graph_interventions.rst  graph_objects.rst  index.rst  parcs_as_latent_distribution.rst  usage.rst
features/: interventions.html  looping.html  m_graphs.html  more_graph_objects.html  partial_randomization.html  temporal_graph.html
first_steps/: first_graph.html  function_list.html  theoretical_background.html
getting_started/: first_graph.html  function_list.html  nodes_and_edges.html  partial_randomization.html  theoretical_background.html
graph_templates/: causal_triangle.yml
guidelines/: simple_guideline.yml
modules/: mapping_functions.py  utils.py
modules/sem/: basic.py  edges.py  graph_objects.py  graph_param.py  handlers.py  mapping_functions.py  new_nodes.py  new_structures.py  nodes.py  structures.py  utils.py
modules/simulators/: static_data.py
modules/univariate_timeseries/: tsn_sim.py
notebooks/: Untitled.ipynb  fourier_series.ipynb  showcase.ipynb  simulator-wrap-up.ipynb  simulator_for_lightning.ipynb
notebooks/hyperimpute_mnar_experiment/: combined_gdf.yml  gdf_R.yml  guideline.yml  main.ipynb  normalized_data.csv
notebooks/hypimp_mar_example/: MAR_linear_uci.json  MAR_nonlinear_uci.json  Untitled.ipynb  gdf_R.yml  gdf_Z.yml  guideline.yml  guideline_nonlinear.yml  main_dashboard.ipynb  normalized_data.csv
notebooks/paper_original_experiment/: MAR.json  compression
notebooks/presentation_figs/: gdf.yml  guideline.yml  main.ipynb
notebooks/sanity_check_hyperimpute/: mcar_test.ipynb
paper_codes/code_comparison/: parcs.py  vanilla.py
paper_codes/figure_2/: run.py
paper_codes/hyperimpute_exp/: MAR_ZR_00.json  MAR_ZR_02.json  MAR_ZR_04.json  MAR_ZR_06.json  MAR_ZR_08.json  MAR_ZR_10.json  MAR_full_data.json  MAR_nonlin.json  MAR_nonlin_edge.json  figures_reports.ipynb  gdf_Z.yml  mar_RR_extended.py  mar_original.py  mnar_mechanism_extended.py
paper_codes/speed/: parcs_full.py  parcs_y_only.csv  parcs_y_only.py  plot_ratios.py  plot_results.py  vanilla.csv  vanilla.py
parcs/: exceptions.py  utils.py
parcs/cdag/: graph_objects.py  mapping_functions.py  output_distributions.py  randomizer.py  utils.py
parcs/graph_builder/: guidelines.py  parsers.py  randomizer.py  utils.py
parcs/helpers/: missing_data.py
parcs/sem/: basic.py  graph_objects.py  (+1 more)
pyparcs/: __init__.py  exceptions.py  temporal.py  utils.py
technical/: api.html  conventions.html  diagrams.html  graph_objects.html
tests/: test_description.py  test_exceptions.py  test_graph.py  test_graph_do_methods.py  test_graph_objects.py  test_guideline.py  test_mapping_functions.py  test_node_distributions.py  test_output_distributions.py  test_parsers.py  test_randomizers.py  test_simple_graph.py  test_temporal_parsers.py  test_utils.py
(+3005 files in other folders)
